--- a/CLIENTESPOTYFY/index.html
+++ b/CLIENTESPOTYFY/index.html
@@ -5,11 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
 </head>
-<body>
+<body class="body">
+
+<header>
+
+</header>
+<main>
+
+    <section>
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-12">
+                    <form action="" >
+                        <select class="form-select" aria-label="Default select example" id="artista">
+                            <option selected>Open this select menu</option>
+                            <option value="3LY2cnBt6jqLEdJco5NBE2">wendy zulca</option>
+                            <option value="7F9Bd5X4sxdwWRJVpbfMtb">zpu</option>
+                            <option value="4VMYDCV2IEDYJArk749S6m">Daddy</option>
+                            <option value="3nFkdlSjzX9mRTtwJOzDYB">Jay Z</option>
+                            <option value="4SMkRKDCNr7bJg1hHS8uqZ">Eminent</option>
+                            <option value="5h0VUGq3Pn45E3rcz9oe66">D.dry</option>
+                            <option value="1ZwdS5xdxEREPySFridCfh">Tupac Shakur</option>
+                            <option value="4myAXQmMuS1lZe8T6Y7eBg">Yomo</option>
+                            <option value="7hJcb9fa4alzcOq3EaNPoG">Snoop Dogg</option>
+                            <option value="3q7HBObVc0L8jNeTe5Gofh">50 Cent</option>
+                            <option value="3Mcii5XWf6E0lrY3Uky4cA">Ice Cube</option>
+                          </select>
+                          <button type="submit" class="btn btn-primary w-100 mt-3" id="buscar">BUSCAR</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <section>
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-5 g-3" id="fila">
+                    
+                </div>
+            </div>
+        </section>
+</main>
+<footer>
+
+</footer>
 
 
     
-    <script src="./SRC/Services/ServicioConsultaCanciones.js"></script>
+    <script src="./SRC/Services/ServicioConsultaCanciones.js" type="module"></script>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
