--- a/CLIENTESPOTYFY/index.html
+++ b/CLIENTESPOTYFY/index.html
@@ -18,7 +18,7 @@
 <main>
 
     <section>
-        <div class="container my-5">
+        <div class="container my-5 btn btn-primary">
             <div class="row">
                 <div class="col-12">
                     <form action="" >
@@ -57,7 +57,7 @@
 
 
     
-    <script src="./SRC/Services/ServicioConsultaCanciones.js" type="module"></script>
+    <script src="./SRC/controllers/controladorBuscarCancion.js" type="module"></script>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
